--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ management:
 spring:
   application:
     name: admin-managee
+  freemarker:
+    request-context-attribute: request
   datasource:
     url: jdbc:mysql://127.0.0.1/cds?useUnicode=true&amp;characterEncoding=UTF-8
     username: cds
