--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -3,9 +3,9 @@
 ########################################################
 # database name
 spring.redis.database=0
-# server host1
+# service host1
 spring.redis.host=127.0.0.1  
-# server password
+# service password
 #spring.redis.password=
 #connection port
 spring.redis.port=6379
@@ -14,7 +14,7 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 spring.redis.pool.max-active=8
 spring.redis.pool.max-wait=-1
-# name of Redis server
+# name of Redis service
 #spring.redis.sentinel.master=
 # comma-separated list of host:port pairs
 #spring.redis.sentinel.nodes=
