--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
      url: jdbc:mysql://127.0.0.1/cds?useUnicode=true&amp;characterEncoding=UTF-8
      username: cds
      password: cds@123456
-     driver_class_namel: com.mysql.jdbc.Driver
+     driver_class_name: com.mysql.jdbc.Driver
      type: com.alibaba.druid.pool.DruidDataSource
 
      # 初始化大小，最小，最大
